# Haptic-Exploration-of-Unknown-Surfaces

./: .gitignore  LICENSE  README.md
Admittance Control/: README.md
Admittance Control/contact_data/: contact_points.csv  contact_points.ply
Admittance Control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Admittance Control/install/fr3_control_publish/include/fr3_control_publish/fr3_control_publish/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
Admittance Control/install/fr3_control_publish/include/fr3_control_publish/fr3_control_publish/msg/detail/: touch_tip_wrench__builder.hpp  touch_tip_wrench__type_support.c  touch_tip_wrench__type_support.h  touch_tip_wrench__type_support.hpp
Admittance Control/install/fr3_control_publish/lib/fr3_control_publish/: ee_pose_bridge  jacobian_publisher
Admittance Control/install/fr3_control_publish/local/lib/python3.10/dist-packages/fr3_control_publish-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
Admittance Control/install/fr3_control_publish/local/lib/python3.10/dist-packages/fr3_control_publish/msg/: __init__.py  _touch_tip_wrench.py
Admittance Control/install/fr3_control_publish/share/ament_index/resource_index/rosidl_interfaces/: fr3_control_publish
Admittance Control/install/fr3_control_publish/share/fr3_control_publish/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Admittance Control/install/fr3_control_publish/share/fr3_control_publish/cmake/: ament_cmake_export_targets-extras.cmake  export_fr3_control_publish__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  fr3_control_publishConfig.cmake  fr3_control_publish__rosidl_typesupport_cppExport-noconfig.cmake  fr3_control_publish__rosidl_typesupport_cppExport.cmake  fr3_control_publish__rosidl_typesupport_introspection_cExport-noconfig.cmake  fr3_control_publish__rosidl_typesupport_introspection_cppExport-noconfig.cmake  fr3_control_publish__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
Admittance Control/install/fr3_control_publish/share/fr3_control_publish/msg/: TouchTipWrench.idl
Admittance Control/install/mujoco_ros2_control/lib/mujoco_ros2_control/: mujoco_ros2_control
Admittance Control/install/mujoco_ros2_control/share/mujoco_ros2_control/: local_setup.sh  package.sh
Admittance Control/install/mujoco_ros2_control_demos/lib/mujoco_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_tricycle_drive  example_velocity
Admittance Control/install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/: local_setup.sh  package.sh
Admittance Control/install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/config/: fr3_admittance_control.yaml  fr3_controllers copy.yaml  fr3_controllers.yaml
Admittance Control/install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/launch/: fr3_hzx.launch.py
Admittance Control/install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/mujoco_models/: fr3.xml  fr3_copy.xml
Admittance Control/install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/mujoco_models/assets/: Cylinder.stl  Hapic_Exploration.stl  sphere.stl  triangle.stl
Admittance Control/log/: latest_build
Admittance Control/src/fr3_control_publish/: CMakeLists.txt  README_contact_recording.md  USAGE.md  package.xml
Admittance Control/src/fr3_control_publish/launch/: contact_scanning.launch.py
Admittance Control/src/fr3_control_publish/src/: HybridForceTangentialController copy 2.cpp  HybridForceTangentialController.cpp  contact_point_recorder.cpp  ee_pose_bridge.cpp  fr3_jacobian_publisher.cpp  fr3_monitor_node.cpp  mujoco_force_publisher.cpp
Admittance Control/src/mujoco_ros2_control/mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_rendering.hpp  mujoco_system.hpp  mujoco_system_interface.hpp
Admittance Control/src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_ros2_control_node copy 2.cpp  mujoco_ros2_control_node copy.cpp  mujoco_ros2_control_node.cpp  mujoco_system.cpp
Admittance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/mujoco_models/assets/: rectangle.stl  tantou_Meshed.stl
Admittance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/urdf/: fr3_nohand copy.urdf  fr3_nohand.urdf
Impedance Control/: README.md  quick_start.sh
Impedance Control/src/mujoco_ros2_control/: .vscodeignore  README.md
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_ros2_control.hpp  mujoco_system.hpp
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control/msg/: MujocoFullState.msg
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_ros2_control.cpp  mujoco_system.cpp
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/: CMakeLists.txt  package.xml
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/config/: fr3_controllers.yaml
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/examples/: fr3_impedance_controller.cpp  fr3_mujoco_bridge_node.cpp  state_manager_node.cpp
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/launch/: fr3_bridge.launch.py  fr3_demo.launch.py
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/msg/: JointStateArray.msg
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/mujoco_models/: fr3.xml
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/mujoco_models/assets/: Curved_Rectangle.stl  rectangle_smaller.stl
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/point_cloud/: plot_pointcloud.py
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/reconstruction/: reconstruct_surface_improved.py  scan_pointcloud_20250825_190753.csv
Impedance Control/src/mujoco_ros2_control/mujoco_ros2_control_demos/urdf/: fr3_nohand (copy).urdf  fr3_nohand.urdf
(+2 files in other folders)
